--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,6 +2,6 @@
 
 <ul style="list-style-type:none;">
   <% @books.each do |book|  %>
-    <li><%= book.title %></li>
+    <li><%= link_to book.title, book_path(book) %></li>
   <% end %>
 </ul>
