--- a/app/views/years/show.html.erb
+++ b/app/views/years/show.html.erb
@@ -1,1 +1,22 @@
-<h2><%= @year.year %></h2>
+<h2><%= @year.year %> with id: <%= @year.id %></h2>
+
+<% if @year.books.any? %>
+  <h4>Here are your books for this year: </h4>
+  <ul>
+    <% @year.books.each do |book| %>
+      <li><%= book.title %></li>
+    <% end %>
+  </ul>
+<% else %>
+  <h4>Start adding books to this year!</h4>
+  <%= form_for @book do |f| %>
+    <%= f.label :title %>
+    <%= f.text_field :title %>
+    <%= f.label :author %>
+    <%= f.text_field :author %>
+    <%= f.hidden_field :year_ids, value: @year.id %>
+    <p><%= f.submit %></p>
+  <% end %>
+<% end %>
+
+<p><%= link_to "Add a book", new_book_path %></p>
