--- a/app/views/years/index.html.erb
+++ b/app/views/years/index.html.erb
@@ -1,7 +1,12 @@
-<h2>Hello WORLD!</h2>
+<h2>Maynard's Years Through Books</h2>
 
-<ul style="list-style-type:none;">
-  <% @years.each do |year| %>
-    <li><%= link_to year.year, year_path(year) %></li>
+<% @years.each do |year| %>
+  <h3><%= link_to year.year, year_path(year) %></h3>
+  <% if year.books.any? %>
+  <ol>
+    <% year.books.each do |book| %>
+      <li><%= link_to book.title, book_path(book) %></li>
+    <% end %>
+  </ol>
   <% end %>
-</ul>
+<% end %>
