--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,4 @@
-<h2>This is the BOOK Hello World</h2>
+<h2>Maynard's Years Through Books</h2>
 
 <% @books.each do |book| %>
   <% title_author = book.title + ' by, ' + book.author  %>
