--- a/app/views/years/show.html.erb
+++ b/app/views/years/show.html.erb
@@ -4,7 +4,7 @@
   <h4>Here are your books for this year: </h4>
   <ul>
     <% @year.books.each do |book| %>
-      <li><%= book.title %></li>
+      <li><%= link_to book.title, book_path(book) %></li>
     <% end %>
   </ul>
 <% else %>
