--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -28,6 +28,7 @@
   <ul>
     <% @book.notes.each do |note| %>
       <li><%= note.text %></li>
+      <li><%= note.text %></li>
     <% end %>
   </ul>
 <% else %>
