--- a/app/views/years/show.html.erb
+++ b/app/views/years/show.html.erb
@@ -12,8 +12,10 @@
   <%= form_for @book do |f| %>
     <%= f.label :title %>
     <%= f.text_field :title %>
-    <%= f.label :author %>
-    <%= f.text_field :author %>
+    <%= f.label :author_first_name %>
+    <%= f.text_field :author_first_name %>
+    <%= f.label :author_last_name %>
+    <%= f.text_field :author_last_name %>
     <%= f.hidden_field :year_ids, value: @year.id %>
     <p><%= f.submit %></p>
   <% end %>
@@ -23,8 +25,24 @@
 <%= form_for @book do |f| %>
   <%= f.label :title %>
   <%= f.text_field :title %>
-  <%= f.label :author %>
-  <%= f.text_field :author %>
+  <%= f.label :author_first_name %>
+  <%= f.text_field :author_first_name %>
+  <%= f.label :author_last_name %>
+  <%= f.text_field :author_last_name %>
   <%= f.hidden_field :year_ids, value: @year.id %>
   <p><%= f.submit %></p>
+<% end %>
+
+<% if @year.notes.any? %>
+  <ul>
+    <% @year.notes.each do |note| %>
+      <li><%= note.text %></li>
+    <% end %>
+  </ul>
+<% else %>
+<%= form_for [@year, @note] do |f| %>
+<%= f.label :text %>
+<%= f.text_field :text %>
+<p><%= f.submit 'Add a Note' %></p>
+  <% end  %>
 <% end %>
