--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,13 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#">About</a></li>
+            <li>
+              <% if current_user %>
+              <%= link_to "Logout", '/logout'  %>
+              <% else %>
+              <%= link_to "Login", '/login' %>
+              <% end %>
+            </li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
