--- a/app/views/years/show.html.erb
+++ b/app/views/years/show.html.erb
@@ -10,16 +10,37 @@
 <% end %>
 
 <% if current_user  %>
-  <h3>Add book</h3>
-  <%= form_for @book do |f| %>
-  <%= f.label :title %>
-  <%= f.text_field :title %>
-  <%= f.label :author_first_name %>
-  <%= f.text_field :author_first_name %>
-  <%= f.label :author_last_name %>
-  <%= f.text_field :author_last_name %>
-  <%= f.hidden_field :year_ids, value: @year.id %>
-  <p><%= f.submit %></p>
+  <div class="form-horizontal">
+    <%= form_for @book, :html => {:class => 'form-horizontal center'} do |f| %>
+    <div class="form-group">
+      <h4>Add book</h4>
+      <%= f.label :title %><br>
+      <div class="col-md-8">
+        <%= f.text_field :title, class: "form-control" %>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :author_first_name %><br>
+      <div class="col-md-8">
+        <%= f.text_field :author_first_name, class: "form-control" %>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :author_last_name %><br>
+      <div class="col-md-8">
+        <%= f.text_field :author_last_name, class: "form-control" %>
+      </div>
+    </div>
+    <%= f.hidden_field :year_ids, value: @year.id %>
+    <div class="form-group">
+      <div class="col-md-offset-4">
+        <%= f.submit :class => 'btn btn-primary btn-sm'%>
+      </div>
+    </div>
+    <% end %>
+  </div>
   <% end %>
 
   <% if @year.notes.any? %>
@@ -29,12 +50,17 @@
     <% end %>
   </ul>
   <% else %>
-  <%= form_for [@year, @note] do |f| %>
-  <%= f.label :text %>
-  <%= f.text_field :text %>
-  <p><%= f.submit 'Add a Note' %></p>
+    <div class="form-horizontal">
+      <h4>Notes</h4>
+      <%= form_for [@year, @note], :html => {:class => 'form-horizontal center'} do |f| %>
+      <div class="form-group">
+        <%= f.text_area :text, rows: 10, class: "form-control" %>
+      </div>
+      <div class="form-group">
+        <p><%= f.submit 'Add a Note', :class =>'btn btn-primary btn-sm' %></p>
+      </div>
+    </div>
   <% end  %>
-  <% end %>
 <% end %>
 
 <% if @host_index != 0 %>
